# k8s-client-rs

./: .travis.yml  Cargo.toml  README.md
api-specs/: README.md
api-specs/skeleton/: config.yaml
api-specs/v1_6/: config.yaml
examples/: get_version.rs  parse_kubeconfig.rs
hbs-templates/: get.rs.hbs  mod.rs.hbs  types_mod.rs.hbs
k8s-rsgen/: Cargo.toml
k8s-rsgen/src/: main.rs  strfix.rs
src/: builder.rs  client_basic.rs  errors.rs  kubeconfig.rs  lib.rs
src/types/: mod.rs  version.rs
src/v1_6/: apis.rs  apps.rs  apps_v1beta1.rs  authentication.rs  authentication_v1.rs  authentication_v1beta1.rs  authorization.rs  authorization_v1.rs  authorization_v1beta1.rs  autoscaling.rs  autoscaling_v1.rs  autoscaling_v2alpha1.rs  batch.rs  batch_v1.rs  batch_v2alpha1.rs  certificates.rs  certificates_v1beta1.rs  core.rs  core_v1.rs  extensions.rs  extensions_v1beta1.rs  generic.rs  logs.rs  mod.rs  policy.rs  policy_v1beta1.rs  rbac_authorization.rs  rbac_authorization_v1alpha1.rs  rbac_authorization_v1beta1.rs  settings.rs  settings_v1alpha1.rs  storage.rs  storage_v1.rs  storage_v1beta1.rs  version.rs
src/v1_6/types/: mod.rs
