# [workspace]
# members = ["k8s-rsgen"]

[package]
name = "k8s-client"
version = "0.0.1-dev.1"
authors = ["Luca Bruno <lucab@debian.org>"]

[dependencies]
error-chain = "0.10"
futures = "0.1"
hyper = "0.11"
hyper-rustls = "0.11"
log = "0.3"
rustls = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
tokio-core = "0.1"
